# flutter_basic_quickstart

./: .gitignore  Cargo.toml  README.md  README.template.md  analysis_options.yaml  coverage.json  customize.rs  customize.ts  customizer.ts  icons_launcher-current.yaml  icons_launcher-next.yaml  icons_launcher.yaml  justfile  launch.template.json  launch.template.json5  pubspec.yaml  version.json5
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_basic_quickstart/: MainActivity.kt
assets/images/: magicPot.svg.vec
ios/: Podfile
ios/Flutter/: AppFrameworkInfo.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner/Base.lproj/: LaunchScreen.storyboard
lib/: app_router.dart  app_router.gr.dart  main.dart  routes.dart  routes.g.dart  version.dart
lib/constants/: app_config.dart  constants.dart
lib/models/: app_config.dart
lib/providers/: app_config_provider.default.dart  app_path_provider.dart  providers.dart
lib/screens/main_screen/: main_screen.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
scratch/: version.desc.txt
src/: customize.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
