[package]
name = "customize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
dialoguer = "0.10.3"
duct = "0.13.6"
handlebars = "4.3.6"
map-macro = "0.2.5"
str_inflector = "0.12.0"

[[bin]]
name = "customize"
path = "src/customize.rs"
