[package]
name = "customize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yansi = "0.5.1"
dialoguer = "0.10.3"
duct = "0.13.6"
handlebars = "4.3.6"
map-macro = "0.2.6"
str_inflector = "0.12.0"

[[bin]]
name = "customize"
path = "src/customize.rs"
